fix(ognl): update spring and tiles plugins for OGNL 3.4.8
- Update SecurityMemberAccessProxyTest to use OgnlContext
- Update tiles PropertyAccessor implementations for new signatures
- Update tiles PropertyAccessor tests to use OgnlContext
- All property accessors now use OgnlContext instead of Map

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>